<resources>
    <string name="app_name">Twhash</string>
    <string name="title_search_by">Search on Twitter\n your favourite topics</string>
    <string name="title_activity_home">TWHash</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_no_results">No Results</string>
    <string name="title_search">Search</string>
    <string name="search_hint">Keywords</string>
    <string name="settings_cache_search">Cache Search</string>
    <string name="settings_cache_clear">Clear Cache</string>
    <string name="settings_cache_search_exp">Search terms will be stored to use later</string>
    <string name="settings_exclusive">Exclusive Mode</string>
    <string name="settings_exclusive_exp">Search by all terms in exclusive mode</string>
    <string name="settings_geolocated">Geolocated Search</string>
    <string name="settings_geolocated_exp">Search by your local country (only for geotagged tweets)</string>
    <string name="settings_result_type">Result Type</string>
    <string name="settings_result_mixed">Mixed</string>
    <string name="settings_result_popular">Popular</string>
    <string name="settings_result_recent">Recent</string>
    <string name="settings_result_mixed_exp">Include both popular and real time results</string>
    <string name="settings_result_recent_exp">Only the most recent results</string>
    <string name="settings_result_popular_exp">Only the most popular results</string>
    <string name="settings_no_location_msg">This feature required your location enabled.</string>
    <string name="no_connection_msg">Please check your network connection.</string>
</resources>
